src/k8s/apps/test-service/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-service-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
